--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -16,7 +16,7 @@
 %%% NOTATION %%%
 %%%%%%%%%%%%%%%%
 
-\newcommand{\Calculus}{\texorpdfstring{\textsf{lin}\CP}{linCP}}
+\newcommand{\Calculus}{\texorpdfstring{\textsf{L}\CP}{LCP}}
 
 \newcommand{\eg}{e.g.\xspace}
 \newcommand{\ie}{i.e.\xspace}
@@ -67,6 +67,11 @@
 \newcommand{\muMALL}{\texorpdfstring{$\mu\textsf{\upshape MALL}^\infty$}{muMALL}\xspace}
 \newcommand{\piLIN}{\texorpdfstring{$\pi\textsf{LIN}$}{piLIN}\xspace}
 \newcommand{\CP}{$\textsf{CP}$\xspace}
+\newcommand{\SCP}{\textsf{SCP}\xspace}
+\newcommand{\SessionPI}{$\textsf{S}\pi$}
+\newcommand{\SessionLAM}{$\textsf{S}\lambda$}
+\newcommand{\LinearPI}{\textsf{L}$\pi$}
+\newcommand{\GradedPI}{\textsf{G}$\pi$}
 \newcommand{\muCP}{$\mu\textsf{CP}$\xspace}
 \newcommand{\piDILL}{$\pi\textsf{DILL}$\xspace}
 \newcommand{\SILLS}{$\textsf{SILL}_{\textsf{S}}$\xspace}
