--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -66,7 +66,8 @@
 \newcommand{\MALL}{\textsf{\upshape MALL}\xspace}
 \newcommand{\muMALL}{\texorpdfstring{$\mu\textsf{\upshape MALL}^\infty$}{muMALL}\xspace}
 \newcommand{\piLIN}{\texorpdfstring{$\pi\textsf{LIN}$}{piLIN}\xspace}
-\newcommand{\CP}{$\textsf{CP}$\xspace}
+\newcommand{\CP}{\textsf{CP}\xspace}
+\newcommand{\GV}{\textsf{GV}\xspace}
 \newcommand{\SCP}{\textsf{SCP}\xspace}
 \newcommand{\SessionPI}{$\textsf{S}\pi$}
 \newcommand{\SessionLAM}{$\textsf{S}\lambda$}
