--- a/paper/main.bib
+++ b/paper/main.bib
@@ -264,6 +264,18 @@
   doi          = {10.1007/978-3-031-62697-5\_9},
 }
 
+@article{GayVasconcelos10,
+  author       = {Simon J. Gay and
+                  Vasco Thudichum Vasconcelos},
+  title        = {Linear type theory for asynchronous session types},
+  journal      = {J. Funct. Program.},
+  volume       = {20},
+  number       = {1},
+  pages        = {19--50},
+  year         = {2010},
+  doi          = {10.1017/S0956796809990268},
+}
+
 @book{GayVasconcelos25,
   title={Session Types},
   author={Gay, Simon J. and Vasconcelos, Vasco T.},
