progress on related

--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -16,7 +16,7 @@
 %%% NOTATION %%%
 %%%%%%%%%%%%%%%%
 
-\newcommand{\Calculus}{\texorpdfstring{\textsf{L}\CP}{LCP}}
+\newcommand{\Calculus}{\texorpdfstring\LCP{LCP}}
 
 \newcommand{\eg}{e.g.\xspace}
 \newcommand{\ie}{i.e.\xspace}
@@ -69,9 +69,9 @@
 \newcommand{\CP}{\textsf{CP}\xspace}
 \newcommand{\GV}{\textsf{GV}\xspace}
 \newcommand{\SCP}{\textsf{SCP}\xspace}
-\newcommand{\SessionPI}{$\textsf{S}\pi$}
-\newcommand{\SessionLAM}{$\textsf{S}\lambda$}
-\newcommand{\LinearPI}{\textsf{L}$\pi$}
+\newcommand{\LCP}{\textsf{LCP}\xspace}
+\newcommand{\SessionPI}{$\textsf{S}\pi$\xspace}
+\newcommand{\LinearPI}{\textsf{L}$\pi$\xspace}
 \newcommand{\GradedPI}{\textsf{G}$\pi$}
 \newcommand{\muCP}{$\mu\textsf{CP}$\xspace}
 \newcommand{\piDILL}{$\pi\textsf{DILL}$\xspace}
