--- a/paper/main.bib
+++ b/paper/main.bib
@@ -264,6 +264,16 @@
   doi          = {10.1007/978-3-031-62697-5\_9},
 }
 
+@article{Padovani17,
+  author       = {Luca Padovani},
+  title        = {A simple library implementation of binary sessions},
+  journal      = {J. Funct. Program.},
+  volume       = {27},
+  pages        = {e4},
+  year         = {2017},
+  doi          = {10.1017/S0956796816000289},
+}
+
 @article{GayVasconcelos10,
   author       = {Simon J. Gay and
                   Vasco Thudichum Vasconcelos},
